# mdq

./: Cargo.toml  Dockerfile  PKGBUILD  README.md  flake.nix
.woodpecker/: build.yml  test.yml
src/: args.rs  lib.rs  main.rs
src/dataview/: mod.rs  query.rs  transform.rs
src/dataview/query/: mod.rs  tests.rs  where_filter.rs
