[package]
name = "mdq"
version = "0.3.1"
edition = "2021"

[lib]
name = "mdq"
path = "src/lib.rs"

[[bin]]
name = "mdq"
path = "src/main.rs"

# Declare mdq as its own workspace root so it stays independent from the
# parent jsaw workspace even while living in the same directory tree.
[workspace]

[dependencies]
jsaw-core = { git = "https://git.hydrar.de/jmarya/jsaw" }
clap = { version = "4.4.7", features = ["cargo"] }
regex = "1.10.2"
walkdir = "2.4.0"
serde_json = "1.0.107"
comfy-table = "7.1.0"
env_logger = "0.11"
log = "0.4.20"
csv = "1.3.0"
